# weechess-rs

./: .gitignore  Cargo.toml  README.md  compare.sh
book/: sample.pgn
scripts/: compare.sh  version.sh
src/: book.rs  evaluator.rs  fen.rs  hasher.rs  lib.rs  notation.rs  printer.rs  searcher.rs  uci.rs
src/game/: attacks.rs  board.rs  color.rs  common.rs  mod.rs  move.rs  movegen.rs  piece.rs  state.rs  utils.rs
weechess-cli/: Cargo.toml
weechess-cli/src/: main.rs
weechess-core/: Cargo.toml
weechess-core/src/: attacks.rs  board.rs  book.rs  color.rs  common.rs  hasher.rs  lib.rs  movegen.rs  moves.rs  notation.rs  piece.rs  printer.rs  state.rs  utils.rs
weechess-engine/: Cargo.toml  build.rs
weechess-engine/src/: book.rs  evaluator.rs  lib.rs  printer.rs  searcher.rs  uci.rs  version.rs
weechess-engine/src/eval/: estimate_piece_worths.rs  evaluate_bad_pawns.rs  evaluate_force_king_to_edge.rs  evaluate_piece_squares.rs  evaluate_piece_worths.rs  mod.rs
