[package]
name = "weechess_engine"
authors.workspace = true
version.workspace = true
edition.workspace = true

[lib]
name = "weechess_engine"
doctest = false

[dependencies]
anyhow = "1.0.75"
ciborium = "0.2.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.8.0"
weechess_core = { path = "../weechess-core" }

[build-dependencies]
ciborium = "0.2.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
weechess_core = { path = "../weechess-core" }
